objects/Veda_Primary_Match__c.object
<CustomObject>
    <fields>
        <fullName>Possible_Match__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Possible Match</label>
        <referenceTo>Veda_Possible_Match__c</referenceTo>
        <relationshipName>PrimaryMatchs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bureau_Reference__c</fullName>
        <label>bureau Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_Of_Birth_First_Reported_Date__c</fullName>
        <label>date Of Birth First Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_Of_Birth_Last_Reported_Date__c</fullName>
        <label>date Of Birth Last Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_Of_Birth__c</fullName>
        <label>date Of Birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>drivers_Licence_First_Reported_Date__c</fullName>
        <label>drivers Licence First Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>drivers_Licence_Last_Reported_Date__c</fullName>
        <label>drivers Licence Last Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>drivers_Licence_Number__c</fullName>
        <label>drivers Licence Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gender_Code__c</fullName>
        <label>gender Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gender__c</fullName>
        <label>gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id_Index__c</fullName>
        <label>id Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>individualName_Last_Credit_Enquiry_Date__c</fullName>
        <label>individualName Last Credit Enquiry Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>individual_Name_Family_Name__c</fullName>
        <label>individual Name Family Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>individual_Name_First_Given_Name__c</fullName>
        <label>individual Name First Given Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>individual_Name_First_Reported_Date__c</fullName>
        <label>individual Name First Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>individual_Name_Last_Reported_Date__c</fullName>
        <label>individual Name Last Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Deceased_Reported_Date__c</fullName>
        <label>is Deceased Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Deceased__c</fullName>
        <label>is Deceased</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lodged_Complaint_Reported_Date__c</fullName>
        <label>lodged Complaint Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lodged_Complaint__c</fullName>
        <label>lodged Complaint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda Primary Match</label>
    <nameField>
        <label>Primary Match Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda PrimaryMatchs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>